--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -257,6 +257,7 @@ homeassistant/components/met/* @danielhiversen @thimic
 homeassistant/components/meteo_france/* @hacf-fr @oncleben31 @Quentame
 homeassistant/components/meteoalarm/* @rolfberkenbosch
 homeassistant/components/metoffice/* @MrHarcombe
+homeassistant/components/metservice/* @ZephireNZ
 homeassistant/components/miflora/* @danielhiversen @ChristianKuehnel @basnijholt
 homeassistant/components/mikrotik/* @engrbm87
 homeassistant/components/mill/* @danielhiversen
