--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1490,6 +1490,9 @@ pymediaroom==0.6.4.1
 # homeassistant.components.melcloud
 pymelcloud==2.5.2
 
+# homeassistant.components.metservice
+pymetservice==0.0.1
+
 # homeassistant.components.somfy
 pymfy==0.9.0
 
