--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -727,6 +727,9 @@ pymata-express==1.19
 # homeassistant.components.melcloud
 pymelcloud==2.5.2
 
+# homeassistant.components.metservice
+pymetservice==0.0.1
+
 # homeassistant.components.somfy
 pymfy==0.9.0
 
