--- a/homeassistant/components/template/manifest.json
+++ b/homeassistant/components/template/manifest.json
@@ -4,5 +4,8 @@
   "documentation": "https://www.home-assistant.io/integrations/template",
   "codeowners": ["@PhracturedBlue", "@tetienne"],
   "quality_scale": "internal",
-  "after_dependencies": ["group"]
+  "after_dependencies": [
+    "group",
+    "binary_sensor"
+  ]
 }
